--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Maryam Taeb
-logo: /assets/img/maryam.png
+logo: /assets/img/file.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
